# guns-detection

./: .gitignore  dvc.yaml  main.py  pyproject.toml
.dvc/: config
config/: config.py
notebook/: notebookfcdaccd4f3.ipynb
src/: data_ingestion.py  data_processing.py  model_architecture.py  model_training.py
tensorboard_logs/20250903-104716/: events.out.tfevents.1756876636.MSI.16300.0
