[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Guns-Detection"
version = "0.1"
authors = [
    { name = "Aman" }
]
dependencies = [
    "pandas",
    "numpy",
    "opencv-python-headless",
    "kagglehub",
    "torch",
    "torchvision",
    "tensorboard",
    "dvc",
    "dvc-gs",
    "fastapi[all]",
    "uvicorn",
    "Pillow"
]

[tool.setuptools.packages.find]
where = ["."]